--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,5 +12,5 @@ jobs:
         with:
           command: run
           jenkinsfile: Jenkinsfile
-          pluginstxt: plugins.txt
+          # pluginstxt: plugins.txt
           jcasc: jcasc.yml
